kustomize/base/obdemo-rs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rs
spec:
  ports:
  - name: http
    port: 8089
    protocol: TCP
    targetPort: 8089
  selector:
    app: rs
  type: ClusterIP
