kustomize/base/obdemo-rs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rs
  annotations:
    cert-manager.io/cluster-issuer: $(CERT_ISSUER)
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      rewrite ^(/rs)$ $1/ redirect;
spec:
  rules:
  - host: $(FQDN)
    http:
      paths:
      - backend:
          serviceName: ig
          servicePort: 8080
        path: /rs/?(.*)
  tls:
  - hosts:
    - $(FQDN)
    secretName: sslcert
